# tests

./: README.md
gcc_5.3_static_template_init_bug/: CMakeLists.txt
gcc_5.3_static_template_init_bug/lib1/: lib1.cpp
gcc_5.3_static_template_init_bug/lib2/: lib2.cpp  lib2.h
gcc_5.3_static_template_init_bug/lib3/: lib3.cpp  lib3.h
gcc_5.3_static_template_init_bug/runner/: main.cpp  reg.h
hello_asm/: README.md  hello.asm
linkage_test_linux/: CMakeLists.txt  main.cpp  reg.h
linkage_test_linux/lib1/: lib1.cpp
linkage_test_linux/lib2/: lib2.cpp
linkage_test_linux/libX/: libX.cpp
linkage_test_windows/: linkage_test.sln
linkage_test_windows/lib1/: lib1.cpp  lib1.vcxproj  lib1.vcxproj.filters
linkage_test_windows/lib2/: lib2.cpp  lib2.vcxproj  lib2.vcxproj.filters
linkage_test_windows/libX/: ReadMe.txt  libX.cpp  libX.vcxproj  libX.vcxproj.filters  stdafx.cpp
linkage_test_windows/linkage_test/: ReadMe.txt  linkage_test.cpp  linkage_test.vcxproj  linkage_test.vcxproj.filters  stdafx.cpp
macro_resolve_test/: CMakeLists.txt  main.cpp
protected_is_transitive/: protected_is_transitive.cpp  protected_test2.cpp
shared_ptr/: shared_ptr_passes
transform_arrays/: transform_arrays.cpp
